tests/NormalTests/paczka1/small_fuzzy/95355284.err
Error in line 2: 9A87 A172 42,0
Error in line 10: V7FTr7LaTO A92 96,9
Error in line 13: zszRD1b S91 85,8
